--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "browser-sync": "^2.26.3",
+        "browser-sync-webpack-plugin": "2.0.1", 
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.5.21"
     }
 }
